[package]
name = "more-options"
version = "3.0.1"
edition = "2018"
rust-version = "1.60"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for options"
keywords = ["more", "options"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-options/"
repository = "https://github.com/commonsensesoftware/more-rs-options"
include = ["src/*.rs", "README.md"]

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
features = ["di", "cfg"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "options"
path = "src/lib.rs"
doctest = false

[features]
di = ["more-di"]
cfg = ["di", "more-config", "serde"]
async = ["more-di?/async"]

[dependencies]
more-changetoken = "2.0"
serde = { version = "1.0", optional = true }

[dependencies.more-di]
version = "3.0"
default-features = false
features = ["builder"]
optional = true

[dependencies.more-config]
version = "2.1"
default-features = false
features = ["binder"]
optional = true

[dev-dependencies]
more-config = { version = "2.1", features = ["binder", "mem", "json"] }
more-options = { path = ".", features = ["cfg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "2.2"

[dev-dependencies.more-di]
version = "3.0"
default-features = false
features = ["builder"]