[package]
name = "more-options"
version = "3.4.0"
edition = "2018"
rust-version = "1.60"
authors = ["Chris Martinez <chris.s.martinez@hotmail.com>"]
description = "Provides support for options"
keywords = ["more", "options"]
license = "MIT"
readme = "README.md"
homepage = "https://commonsensesoftware.github.io/more-rs-options/"
repository = "https://github.com/commonsensesoftware/more-rs-options"

# RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc
[package.metadata.docs.rs]
features = ["di", "cfg"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "options"
path = "src/lib.rs"
doctest = false

[features]
di = ["dep:more-di"]
cfg = ["di", "dep:more-config", "dep:serde"]
async = ["more-config?/async", "more-di?/async", "dep:maybe-impl"]

[dependencies]
cfg-if = "1.0"
more-changetoken = "2.0"
serde = { version = "1.0", optional = true }
maybe-impl = { version = "0.1.0", optional = true }

[dependencies.more-di]
version = "3.2"
default-features = false
features = ["builder"]
optional = true

[dependencies.more-config]
version = "2.1"
default-features = false
features = ["binder"]
optional = true

[dev-dependencies]
more-config = { version = "2.1", features = ["binder", "mem", "json"] }
more-options = { path = ".", features = ["cfg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-case = "2.2"
